		* Fix wxTempFile usage for compressed IPFilter files

	Phoenix:
		* Removed the dlopen() code from UPnP.cpp.
		* Added the m4 macro to test for libupnp.
		* Updated amule_build_install.sh to work with
		  --with-libupnp-prefix.
		* Added a search for WANCommonInterfaceConfig and
		  Layer3Forwarding services for UPnP, aside from
		  WANIPConnection and WANPPPConnection.

	Stu Redman:
		* Scanner fix for MSVC compilation
		* Sort DownloadListCtrl on startup
		* Sort source list on opening and add file name to A4AF files
		* Fixed crash when progress bar was resized to zero width
		* Fixed sharing of large files on Windows
		* Fixed free disc space check
		* Sanity check before writing nodes.dat - don't write it 
		  if there are less than 25 contacts

	Vollstrecker:
		* Made possible to deactivate xas

	Wuischke:
		* Show connection status in toolbar when changing skin, thanks to greek

--------------------------------------------------------------------------------

Version 2.2.1 - The "Excuse me, have you seen my 2.2.0 release anywhere?" version.
----------
2008-06-11

	Bas Zoetekouw:
		* Patch for debian bug #350396: "amule depletes entropy pool".

	brainnolo:
		* Patch for loading the correct path for the UPnP libraries
		  in Mac.
		* Added the binaries for libUPnP for Mac to the directory
		  aMule.app/Contents/Frameworks.
		* Universal Binary ed2kHelperScript update.
		* avoid removing libupnp libs during initial cleanup
		  (this would defeat bundling them) . It will now remove only
		  libwx in the Frameworks directory (which are supposed to be
		  from an old build).

	centaur:
		* OpenBSD patch.

	Coronas:
		* Patch to show kad status in amuleweb (Bug 1103)
		* typo in src/webserver/default/shared.php

	drkirkby:
		* Test for gcc before including gcc specific flags on the
		  compiler line.

	DLH:
		* amulegui.xpm icon.

	EastWind:
		* Patch to prevent overwriting of GDLIB_LIBS

	Gaznevada:
		* IRIX compatibility patches
		* amuleweb php IRIX patches