@@ -36,6 +36,9 @@ Version 2.2.2 - Whatever comes next.
 		* Added a search for WANCommonInterfaceConfig and
 		  Layer3Forwarding services for UPnP, aside from
 		  WANIPConnection and WANPPPConnection.
+		* Changed the UPnP code to allow the use of a service without
+		  having successfully subscribed to it. That should be enough
+		  to deal with some lazy router implementations.
 
 	Stu Redman:
 		* Scanner fix for MSVC compilation
